# roverpi

./: .gitignore  Doxyfile  LICENSE.md  README.md  pantilt_test.py  requirements.txt  test_uart.py
app/: app_flask.py  camera.py  main.py  ml.py  occupancy_map.py  pantilt.py  rover_agent.py  rover_env.py  serial_comm.py  uart_test.py
app/frontend/: vite.config.js
app/frontend/src/: App.jsx  index.css
main_roverpi/main/: CMakeLists.txt  battery_monitor.c  battery_monitor.h  distance_sensor.c  distance_sensor.h  gyroscope.c  gyroscope.h  hardware_config.h  ir_obstacle.c  ir_obstacle.h  main.c  motor_control.c  motor_control.h  roverpi_fsm.c  roverpi_fsm.h  serial_uart.c  serial_uart.h
